k8s/react/stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: stack-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: ECR_REGISTRY/cloud-forge/react:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: stack-react
spec:
  selector:
    app: react
  ports:
    - port: 80
